--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <div class="value" id="value3">👎</div>
       </div>
     </div>
+    <h1>Number decides change and animation speed</h1>
     <input id="inpSpeed" type="number" min="1" max="10" />
+    <button class="spin" id="spinBtn">TAKE A SPIN</button>
   </body>
 </html>
