--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
   </head>
   <body>
     <div class="machine">
-      <div class="slot" id="slot1">
-        <div class="value" id="value1">🤏</div>
+      <div class="a1" id="slot1">
+        <!-- <div class="value" id="value1">🤏</div> -->
       </div>
-      <div class="slot" id="slot2">
-        <div class="value" id="value2">👊</div>
+      <div class="a1" id="slot2">
+        <!-- <div class="value" id="value2">👊</div> -->
       </div>
-      <div class="slot" id="slot3">
-        <div class="value" id="value3">👎</div>
+      <div class="a1" id="slot3">
+        <!-- <div class="value" id="value3">👎</div> -->
       </div>
     </div>
-    <h1>Number decides change and animation speed</h1>
-    <input id="inpSpeed" type="number" min="1" max="10" />
-    <button class="spin" id="spinBtn">TAKE A SPIN</button>
+    <h1 id="status">Press button to spin</h1>
+    <!-- <input id="inpSpeed" type="number" min="1" max="10" /> -->
+    <button class="spin" id="spinBtn" onclick="spinning()">TAKE A SPIN</button>
   </body>
 </html>
